[package]
name = "huski-lib-core"
version = "1.1.0"
authors= [ "software9119.technology" ]
edition = "2021"
description = "No std ASCII table aide library core."
readme = "./README.md"
repository = "https://github.com/deep-outcome/ascii-aide/tree/main/huski-lib-core"
documentation = "https://docs.rs/huski-lib-core/latest/huski_lib_core"
license = "MIT"
keywords = ["ascii","ascii-table"]
categories = ["no-std", "no-std::no-alloc", "encoding"]

[dev-dependencies]
huski-auxies = { path = "../huski-auxies", version = "1.0.2" }
