[package]
name = "huski-lib"
version = "2.0.2"
authors= [ "software9119.technology" ]
edition = "2021"
description = "ASCII table aide library."
readme = "./README.md"
repository = "https://github.com/deep-outcome/ascii-aide/tree/main/huski-lib"
documentation = "https://docs.rs/huski-lib/latest/huski_lib/"
license = "MIT"
keywords = ["ascii","ascii-table"]
categories = ["encoding"]

[dependencies]
huski-lib-core = { path = "../huski-lib-core", version = "1.1.1"}
huski-auxies = { path = "../huski-auxies", version = "1.0.5" }
