[package]
name = "huski"
version = "1.1.1"
authors= [ "software9119.technology" ]
edition = "2021"
description = "ASCII table aide command line utility."
readme = "./README.md"
repository = "https://github.com/deep-outcome/ascii-aide/tree/main/huski"
license = "MIT"
keywords = ["ascii","ascii-table"]
categories = ["encoding" , "command-line-utilities"]

[dependencies]
huski-lib = { path = "../huski-lib", version = "2.0.2" }
