[package]
name = "husky-lib"
version = "1.0.0"
authors= [ "software9119.technology" ]
edition = "2021"
description = "ASCII table aide library."
documentation = ""
readme = "./README.md"
homepage = "https://github.com/bravequickcleverfibreyarn/ascii-aide/tree/main/husky-lib"
repository = "https://github.com/bravequickcleverfibreyarn/ascii-aide/tree/main/husky-lib"
license = "MIT"
keywords = ["ascii","ascii-table"]
categories = ["encoding"]

[dependencies]
husky-lib-core = { path = "../husky-lib-core" }
husky-auxies = { path = "../husky-auxies" }
